--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,7 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/**/*'
     - 'app/controllers/catalog_controller.rb'
+    - 'lib/traject/vatican_tei_config.rb'
 
 Bundler/OrderedGems:
   Enabled: false
