--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,13 @@ services:
     build: .
     ports:
       - "3000:3000"
+    privileged: true
+    cap_add:
+      - SYS_ADMIN
+    security_opt:
+      - seccomp:unconfined
+    tmpfs:
+      - /run
+      - /run/lock
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
