--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
 before_install:
   - gem install bundler
   - google-chrome-stable --headless --no-sandbox --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - npm install
 
 before_script:
   - bin/rails db:test:prepare
