--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ env:
 before_install:
   - gem install bundler
   - google-chrome-stable --headless --no-sandbox --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - npm install
+  - yarn install
 
 before_script:
+  - bin/rails assets:precompile
   - bin/rails db:test:prepare
 
 sudo: false
