--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^23.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1"
+    "eslint-plugin-react": "^7.9.1",
+    "jest": "^23.1.0"
   },
-  "engines" : {
-    "npm" : "^5.2"
+  "engines": {
+    "npm": "^5.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.es6?$": "babel-jest",
+      "^.+\\.spec.js?$": "babel-jest"
+    }
   }
 }
