add basic Vatican TEI faceting / indexing approach

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -13,3 +13,129 @@ vatican_iiif_resource:
   # can be found.  Use the token <strong>{shelfmark}</strong> in the pattern
   # to represent the item's unique identifier.
   tei_template_url: https://digi.vatlib.it/tei/{shelfmark}.xml
+vatican:
+  collections:
+    - Angelini.
+    - Arch.Barb.
+    - Arch.Barb.Colonna.di.Sciarra.
+    - Arch.Bibl.
+    - Arch.Cap.S.Pietro.
+    - Arch.Chig.
+    - Arch.Salviati.
+    - Autogr.Ferr.Misc.Visconti.
+    - Autogr.Ferr.Racc.Ferr.
+    - Autogr.Ferr.Racc.Menozzi.
+    - Autogr.Ferr.Racc.Minervini.
+    - Autogr.Ferr.Racc.Odorici.
+    - Autogr.Ferr.Racc.Visconti.
+    - Autogr.Ferr.Racc.prima.
+    - Autogr.Paolo.VI.
+    - Autogr.Patetta.
+    - Autogr.Vat.
+    - Barb.gr.
+    - Barb.lat.
+    - Barb.or.
+    - Bonc.
+    - Borg.Carte.naut.
+    - Borg.ar.
+    - Borg.arm.
+    - Borg.cin.
+    - Borg.copt.
+    - Borg.ebr.
+    - Borg.eg.
+    - Borg.et.
+    - Borg.georg.
+    - Borg.gr.
+    - Borg.ill.
+    - Borg.ind.
+    - Borg.irl.
+    - Borg.isl.
+    - Borg.lat.
+    - Borg.mess.
+    - Borg.pers.
+    - Borg.siam.
+    - Borg.sir.
+    - Borg.tonch.
+    - Borg.turc.
+    - Borgh.
+    - Capp.Giulia.
+    - Capp.Sist.
+    - Capp.Sist.Diari.
+    - Cappon.
+    - Carte.Belli.
+    - Carte.Mercati.
+    - Carte.Salvadori.
+    - Carte.Stefani.
+    - Carte.d`Abbadie.
+    - Carteggi.Mercati.
+    - Carteggi.Toniolo.
+    - Carteggi.Villari.
+    - Cerulli.et.
+    - Cerulli.pers.
+    - Chig.
+    - Comb.
+    - Comp.Ott.
+    - De.Marinis.
+    - Ferr.
+    - Indirizzi.
+    - Intr.Es.
+    - Lasc.De.Rossi.
+    - Lasc.Pastor.
+    - Lasinio.
+    - Legat.
+    - Mss.fot.
+    - Neofiti.
+    - Not.Orange.
+    - Ott.gr.
+    - Ott.lat.
+    - P.I.O.
+    - Pagès.
+    - Pal.gr.
+    - Pal.lat.
+    - Pantheon.
+    - Pap.Bodmer.
+    - Pap.Hanna.
+    - Pap.Vat.copt.
+    - Pap.Vat.copt.Doresse.
+    - Pap.Vat.dem.
+    - Pap.Vat.gr.
+    - Pap.Vat.lat.
+    - Patetta.
+    - Perg.Terracina.
+    - Perg.Veroli.
+    - Racc.Patetta.
+    - Raineri.
+    - Reg.gr.
+    - Reg.gr.Pio.II.
+    - Reg.lat.
+    - Ross.
+    - Ruoli.
+    - S.Anastasia.
+    - S.Angelo.in.Pescheria.
+    - S.Maria.Magg.
+    - S.Maria.in.Cosmedin.
+    - S.Maria.in.Via.Lata.
+    - S.Offizio.
+    - Sbath.
+    - Sire.
+    - Urb.ebr.
+    - Urb.gr.
+    - Urb.lat.
+    - Vat.ar.
+    - Vat.arm.
+    - Vat.copt.
+    - Vat.ebr.
+    - Vat.estr.or.
+    - Vat.et.
+    - Vat.gr.
+    - Vat.iber.
+    - Vat.ind.
+    - Vat.lat.
+    - Vat.mand.
+    - Vat.mus.
+    - Vat.pers.
+    - Vat.rum.
+    - Vat.sam.
+    - Vat.sir.
+    - Vat.slav.
+    - Vat.turc.
