--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,7 @@ Metrics/BlockLength:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
     - lib/traject/vatican_iiif_config.rb
+    - lib/traject/annotation_config.rb
     - 'spec/**/*'
 
 Metrics/ClassLength:
