--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,7 @@ Rails:
 Metrics/BlockLength:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
+    - lib/tasks/*
     - lib/traject/vatican_iiif_config.rb
     - lib/traject/annotation_config.rb
     - 'spec/**/*'
