Add sample translated tags

--- a/lib/translation_maps/annotation_tags.yaml
+++ b/lib/translation_maps/annotation_tags.yaml
@@ -1,1 +1,21 @@
-Animali (Agnelli): Animals (Lambs)
+Alloro:	Laurel
+Angeli:	Angels
+Animali:	Animals
+Animali (Agnelli):	Animals (Lambs)
+Animali (Asini):	Animals (Donkeys)
+Animali (Cani):	Animals (Dogs)
+Animali (Cavalli):	Animals (Horses)
+Datazione (Sec. IX):	Date (9th cent.)
+Datazione (Sec. VIII):	Date (8th cent.)
+Datazione (Sec. X):	Date (10th cent.)
+Datazione (Sec. XII):	Date (12th cent.)
+Datazione (Sec. XIII):	Date (13th cent.)
+Datazione (Sec. XIV):	Date (14th cent.)
+Datazione (Sec. XV):	Date (15th cent.)
+"iniziali: A":	"initial letters: A"
+"iniziali:B":	"initial letters: B"
+"iniziali:C":	"initial letters: C"
+Miniature:	Illuminations
+Frontespizi:	Title pages
+Fregi:	Ornaments
+Blu:	Blue
