--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1"
   },
-  "engines" : {
-    "npm" : "^5.2"
+  "engines": {
+    "npm": "^5.2"
   }
 }
