--- a/config/database.yml
+++ b/config/database.yml
@@ -25,3 +25,7 @@ production:
   database: db/production.sqlite3
   encoding: utf8mb4
   collation: utf8mb4_unicode_ci
+  connect_timeout: 1
+  read_timeout: 1
+  write_timeout: 1
+  checkout_timeout: 5
