--- a/lib/translation_maps/annotation_tags.yaml
+++ b/lib/translation_maps/annotation_tags.yaml
@@ -242,7 +242,7 @@ Helvia: Helvia
 Hercules: Hercules
 Hero: Hero
 Hydra: Hydra
-I. Maggiulli (a cura di): I. Maggiuli (edited by)
+I. Maggiulli (a cura di): I. Maggiulli (edited by)
 Ianus (tempio): Janus (temple)
 Iason: Jason
 Ibridi: Hybrids
@@ -330,6 +330,7 @@ Luoghi: Places
 Lupa capitolina: Capitoline Wolf
 Lycaon: Lycaon
 Lycon: Lycon
+M. Grimaccia: M. Grimaccia
 Macchine da guerra: War machines
 Maestri: Chiefs
 Mago (generale cartaginese): Mago (Carthaginian general)
