--- a/lib/translation_maps/annotation_tags.yaml
+++ b/lib/translation_maps/annotation_tags.yaml
@@ -259,7 +259,7 @@ Incipit: Incipit
 Inferi: Underworld
 Infermi: Invalids
 Inferno: Hell
-Iniziali: Orange color
+Iniziali: Initials
 Iniziali a bianchi girari: Initials of the bianchi girali type
 Iniziali abitate: Inhabited Initials
 Iniziali calligrafiche: Plain Initials
